--- a/TechnicalTest/TechnicalTest.csproj
+++ b/TechnicalTest/TechnicalTest.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\DeserializationHelper.cs" />
     <Compile Include="Helpers\GSTHelper.cs" />
     <Compile Include="Models\Expense.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
